--- a/src/user-form.html
+++ b/src/user-form.html
@@ -9,7 +9,7 @@
 <link rel="import" href="../bc/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bc/paper-input/paper-input.html">
 <link rel="import" href="../bc/paper-item/paper-item.html">
-<link rel="import" href="../bc/paper-menu/paper-menu.html">
+<link rel="import" href="../bc/paper-listbox/paper-listbox.html">
 <link rel="import" href="../bc/polymer-responsive-dialog/responsive-dialog.html">
 <link rel="import" href="../bc/polymer/polymer.html">
 
@@ -29,14 +29,14 @@
             <div class="layout vertical">
                 <paper-dropdown-menu label="Account Role"
                             vertical-align="top" horizontal-align="right">
-                    <paper-menu class="dropdown-content"
+                    <paper-listbox slot="dropdown-content"
                             attr-for-selected="value"
                             selected="{{user.role}}">
                         <template is="dom-repeat"
                                 items="[[constants.user_roles]]">
                             <paper-item value="[[item]]">[[item]]</paper-item>
                         </template>
-                    </paper-menu>
+                    </paper-listbox>
                 </paper-dropdown-menu>
             </div>
 
