Replace paper-material with paper-material-styles
The former is deprecated.

Part of #9.

--- a/src/global-styles.html
+++ b/src/global-styles.html
@@ -20,9 +20,6 @@
                 --iron-icon-height:     4em;
                 --iron-icon-fill-color: gray;
             }
-            paper-material {
-                background-color: white;
-            }
             a.inherit-color {
                 color:              inherit;
                 text-decoration:    none;
@@ -36,11 +33,13 @@
                 right:      2em;
                 z-index:    100;
             }
-            paper-material.card-item {
-                 padding-left:      0.5em;
-                 padding-right:     0.5em;
-                 padding-top:       0.5em;
-                 padding-bottom:    0.5em;
+            div.paper-material.card-item {
+                background-color:   white;
+                border-radius:      3px;
+                padding-left:       0.5em;
+                padding-right:      0.5em;
+                padding-top:        0.5em;
+                padding-bottom:     0.5em;
             }
             .card-title {
                 margin-top:     0;
