Move comments inside script tags
This is a silly change to make the polymer analyzer happy.

--- a/src/form-behavior.html
+++ b/src/form-behavior.html
@@ -1,10 +1,8 @@
-<!--
-    Copyright (c) 2016-2017, Randy Westlund. All rights reserved.
-    This code is under the BSD-2-Clause license.
--->
-<!-- This defines behavior common to all forms, such as clearing fields. -->
-
 <script>
+// Copyright (c) 2016-2017, Randy Westlund. All rights reserved.
+// This code is under the BSD-2-Clause license.
+//
+// This defines behavior common to all forms, such as clearing fields.
 'use strict';
 var recipe_behaviors = recipe_behaviors || {};
 /** @polymerBehavior recipe_behaviors.form_behavior */
