--- a/src/global-behavior.html
+++ b/src/global-behavior.html
@@ -1,10 +1,8 @@
-<!--
-    Copyright (c) 2016-2017, Randy Westlund. All rights reserved.
-    This code is under the BSD-2-Clause license.
--->
-<!-- This defines behavior and utilities imported by all element. -->
-
 <script>
+//Copyright (c) 2016-2017, Randy Westlund. All rights reserved.
+//This code is under the BSD-2-Clause license.
+//
+//This defines behavior and utilities imported by all elements.
 var constants = {};
 
 constants.user_role_enum = {
