Fix adding tags to new recipes
Start `recipe.tags` as an empty array.

--- a/src/item-collection.html
+++ b/src/item-collection.html
@@ -247,6 +247,7 @@
                         data.user = this.new_item;
                     }
                     else if (this.itemName === "recipes") {
+                        this.new_item.tags = [];
                         data.name = "create_recipe_form";
                         data.recipe = this.new_item;
                     }
