Fix typo from 7e95e4daf

--- a/src/item-collection.html
+++ b/src/item-collection.html
@@ -232,7 +232,7 @@
                 },
                 refresh_signal: function(e) {
                     // Only refresh the one that was changed.
-                    if (this.itemName == e.datail) this.refresh();
+                    if (this.itemName == e.detail) this.refresh();
                 },
                 // Reload the collection of items.
                 refresh: function() {
