--- a/src/recipes-app.html
+++ b/src/recipes-app.html
@@ -61,6 +61,10 @@
             --responsive-dialog-paper-dialog: {
                 width: 500px;
             }
+            --responsive-dialog-toolbar: {
+                background-color: var(--dark-primary-color);
+                color: #dedede;
+            }
             --app-grid-gutter: 5px;
         }
         @media (min-width:700px) {
