Fix hiding the FAB

--- a/src/item-collection.html
+++ b/src/item-collection.html
@@ -40,6 +40,9 @@
                 margin-top: 1em;
                 background-color: white;
             }
+            [hidden] {
+                display: none;
+            }
         </style>
 
         <!-- AJAX requests. -->
