--- a/src/recipe-display.html
+++ b/src/recipe-display.html
@@ -49,9 +49,7 @@
             <iron-collapse id="collapse" opened="{{recipe._expanded}}">
                 <div class="app-grid">
                     <div>
-                        <strong class="recipe-item-label">
-                            Ingredients
-                        </strong>
+                        <strong class="recipe-item-label">Ingredients</strong>
                         <ul class="ingredients-list">
                             <template is="dom-repeat"
                                       items="[[recipe.ingredients]]">
