--- a/src/recipes-app.html
+++ b/src/recipes-app.html
@@ -96,10 +96,14 @@
         iron-icon {
             margin-right: 5px;
         }
+        /* Hide the drawer menu on wide layout. */
+        app-drawer-layout:not([narrow]) [drawer-toggle] {
+              display: none;
+        }
     </style>
 
     <app-drawer-layout id="drawer_layout" fullbleed responsive-width="900px">
-        <app-drawer id="drawer" swipe-open>
+        <app-drawer id="drawer" slot="drawer" swipe-open>
             <app-toolbar></app-toolbar>
             <paper-listbox selected="[[route_data.page]]"
                     attr-for-selected="name"
@@ -146,7 +150,7 @@
         </app-drawer>
 
         <app-header-layout fullbleed>
-            <app-header fixed effects="waterfall">
+            <app-header slot="header" fixed effects="waterfall">
                 <app-toolbar>
                     <paper-icon-button icon="icons:menu" drawer-toggle>
                     </paper-icon-button>
@@ -172,15 +176,9 @@
                         fallback-selection="404">
 
                     <neon-animatable name="">
-                        <!-- Only set enable-fab if appropriate. -->
-                        <template is="dom-if" if="[[is_user(user_role)]]">
-                            <item-collection item-name="recipes" enable-fab>
-                            </item-collection>
-                        </template>
-                        <template is="dom-if" if="[[!is_user(user_role)]]">
-                            <item-collection item-name="recipes">
-                            </item-collection>
-                        </template>
+                        <item-collection item-name="recipes"
+                                enable-fab="[[is_user(user_role)]]">
+                        </item-collection>
                     </neon-animatable>
 
                     <neon-animatable name="recipes">
