Add the animation polyfill

--- a/src/recipes-app.html
+++ b/src/recipes-app.html
@@ -13,13 +13,15 @@
 <link rel="import" href="../bc/app-layout/app-toolbar/app-toolbar.html">
 <link rel="import" href="../bc/app-route/app-location.html">
 <link rel="import" href="../bc/app-route/app-route.html">
-<link rel="import" href="../bc/paper-listbox/paper-listbox.html">
 <link rel="import" href="../bc/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../bc/iron-icons/maps-icons.html">
 <link rel="import" href="../bc/iron-icons/social-icons.html">
 <link rel="import" href="../bc/neon-animation/neon-animatable.html">
 <link rel="import" href="../bc/neon-animation/neon-animated-pages.html">
+<link rel="import" href="../bc/paper-listbox/paper-listbox.html">
 <link rel="import" href="../bc/paper-styles/element-styles/paper-material-styles.html">
+<!-- Include the neon-animation 2.0 polyfil, needed for paper-dropdown-menu. -->
+<link rel="import" href="../bc/neon-animation/web-animations.html">
 
 <link rel="import" href="cookie-display.html">
 <link rel="import" href="global-behavior.html">
