--- a/src/cookie-display.html
+++ b/src/cookie-display.html
@@ -1,9 +1,9 @@
 <!--
-    Copyright (c) 2016-2017, Randy Westlund. All rights reserved.
+    Copyright (c) 2016-2018, Randy Westlund. All rights reserved.
     This code is under the BSD-2-Clause license.
 -->
 <!-- This module shows the current value of a cookie. --> 
-<link rel="import" href="../bc/polymer/polymer.html">
+<link rel="import" href="../bc/polymer/polymer-element.html">
 
 <dom-module id="cookie-display">
     <template>
@@ -14,32 +14,32 @@
         </style>
     </template>
 
-    <script>
-        (function () {
-            'use strict';
-            Polymer({
-                is: 'cookie-display',
-                properties: {
-                    cookieName: String,
-                    cookieValue: {
-                        type: String,
-                        computed: "read_cookie(cookieName)",
-                        notify: true
-                    },
-                },
-                read_cookie: function(name) {
-                    var cstring = decodeURIComponent(document.cookie);
-                    var parts = cstring.split(';');
-                    var search_str = name + '=';
-                    for (var i = 0; i < parts.length; i++) {
-                        while (parts[i].charAt(0) === ' ')
-                            parts[i] = parts[i].substring(1);
-                        if (parts[i].indexOf(search_str) !== -1)
-                            return parts[i].substring(search_str.length);
-                    }
-                    return '';
-                }
-            });
-        })();
-    </script>
+<script>
+"use strict";
+class CookieDisplay extends Polymer.Element {
+    static get is() { return "cookie-display"; }
+    static get properties() {
+        return {
+            cookieName: { type: String },
+            cookieValue: {
+                type: String,
+                computed: "read_cookie(cookieName)",
+                notify: true
+            },
+        };
+    }
+    read_cookie(name) {
+        var cstring = decodeURIComponent(document.cookie);
+        var parts = cstring.split(';');
+        var search_str = name + '=';
+        for (var i = 0; i < parts.length; i++) {
+            while (parts[i].charAt(0) === ' ') parts[i] = parts[i].substring(1);
+            if (parts[i].indexOf(search_str) !== -1)
+                return parts[i].substring(search_str.length);
+        }
+        return '';
+    }
+}
+customElements.define(CookieDisplay.is, CookieDisplay);
+</script>
 </dom-module>
