--- a/src/recipe-notifications.html
+++ b/src/recipe-notifications.html
@@ -1,12 +1,13 @@
 <!--
-    Copyright (c) 2016-2017, Randy Westlund. All rights reserved.
+    Copyright (c) 2016-2018, Randy Westlund. All rights reserved.
     This code is under the BSD-2-Clause license.
 -->
 <!-- This module listens to toast signals and displays them so that not every
      element needs a paper-toast. -->
 
 <link rel="import" href="../bc/paper-toast/paper-toast.html">
-<link rel="import" href="../bc/polymer/polymer.html">
+<link rel="import" href="../bc/polymer/polymer-element.html">
+<link rel="import" href="../bc/polymer/lib/mixins/gesture-event-listeners.html">
 
 <link rel="import" href="global-styles.html">
 
@@ -35,35 +36,32 @@
         </paper-toast>
     </template>
 
-    <script>
-        (function () {
-            'use strict';
-            Polymer({
-                is: 'recipe-notifications',
-                attached: function() {
-                    this._success_listener = this.show_success_toast.bind(this);
-                    this._error_listener = this.show_error_toast.bind(this);
-                    window.addEventListener("success-toast",
-                            this._success_listener);
-                    window.addEventListener("error-toast",
-                            this._error_listener);
-                },
-                // Remove listeners to avoid memory leaks.
-                detached: function() {
-                    window.removeEventListener("success-toast",
-                            this._success_listener);
-                    window.removeEventListener("error-toast",
-                            this._error_listener);
-                },
-                show_success_toast: function(e) {
-                    this.$.success_toast.text = e.detail;
-                    this.$.success_toast.show();
-                },
-                show_error_toast: function(e) {
-                    this.$.error_toast.text = e.detail;
-                    this.$.error_toast.show();
-                },
-            });
-        })();
-    </script>
+<script>
+"use strict";
+class RecipeNotifications extends
+        Polymer.GestureEventListeners(Polymer.Element) {
+    static get is() { return "at-notifications"; }
+    connectedCallback() {
+        super.connectedCallback();
+        this._success_listener = this.show_success_toast.bind(this);
+        window.addEventListener("success-toast", this._success_listener);
+        this._error_listener = this.show_error_toast.bind(this);
+        window.addEventListener("error-toast", this._error_listener);
+    }
+    disconnectedCallback() {
+        super.disconnectedCallback();
+        window.removeEventListener("success-toast", this._success_listener);
+        window.removeEventListener("error-toast", this._error_listener);
+    }
+    show_success_toast(e) {
+        this.$.success_toast.text = e.detail;
+        this.$.success_toast.show();
+    }
+    show_error_toast(e) {
+        this.$.error_toast.text = e.detail;
+        this.$.error_toast.show();
+    }
+}
+customElements.define(RecipeNotifications.is, RecipeNotifications);
+</script>
 </dom-module>
