--- a/src/ingredients-form.html
+++ b/src/ingredients-form.html
@@ -13,6 +13,7 @@
 <link rel="import" href="../bc/polymer-responsive-dialog/responsive-dialog.html">
 <link rel="import" href="../bc/polymer/lib/elements/dom-repeat.html">
 <link rel="import" href="../bc/polymer/polymer-element.html">
+<link rel="import" href="../bc/polymer/lib/mixins/gesture-event-listeners.html">
 
 <link rel="import" href="form-mixin.html">
 
@@ -52,7 +53,8 @@
 </template>
 
 <script>
-class IngredientsForm extends Recipes.FormMixin(Polymer.Element) {
+class IngredientsForm extends Polymer.GestureEventListeners(
+        Recipes.FormMixin(Polymer.Element)) {
     static get is() { return "ingredients-form"; }
     static get properties() {
         return {
